LC0332 Reconstruct Itinerary - Priority Queue solution